mxslc/tests/data/error/const_1.mxsl
const float x = 1.0;

void foo()
{
    x = 3.0;
}

foo();